# fagao-ai.github.io

./: .gitignore  CNAME.template  Cargo.toml  DEPLOY.md  DESIGN.md  INSTALL.md  LICENSE  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  SETUP_GUIDE.md  _config.yml  cte.rb  index.html  styles.css
.github/workflows/: build-deb.yml  release.yml
apt/: README.md  gpg.key
examples/: config.json  config.toml  config.yaml
scripts/: install.sh
src/: json_parser.rs  main.rs  parser.rs  toml_parser.rs  yaml_parser.rs
